# xerostomia-finetuning

./: README.md  llm-classification.py  main.py  pyproject.toml
data-processing/: aug.py  cache_dataset.py
nested-cv/: config.py  experiment_results.txt  main.py  modeling.py  nested-cv-medgemma-1.5-results-16b.csv  soft_class_medgemma1.5_results_16b.csv
