[project]
name = "xerostomia-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "bitsandbytes>=0.49.2",
    "datasets>=4.3.0",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "optuna>=4.8.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "trl>=0.24.0",
    "unsloth>=2026.5.2",
    "xformers>=0.0.35",
]
